Updated section settings and added sound and SFX manipulation and storing it in settings.json

--- a/settings.json
+++ b/settings.json
@@ -1,10 +1,1 @@
-{
-  "music": {
-    "enable": true,
-    "volume": 3
-  },
-  "sfx": {
-    "enable": true,
-    "volume": 5
-  }
-}
+{"music": {"enable": true, "volume": 3}, "sfx": {"enable": false, "volume": 5}}
